move rule_config.yml to a config subdir

--- a/.gitsecret/paths/mapping.cfg
+++ b/.gitsecret/paths/mapping.cfg
@@ -1,5 +1,5 @@
-terraform.tfstate
-terraform.tfstate.backup
-terraform.tfvars
-keys/support.pem
-tpl/rule_config.yml
+terraform.tfstate:
+terraform.tfstate.backup:
+terraform.tfvars:
+keys/support.pem:
+tpl/config/rule_config.yml
