remove state files

--- a/.gitsecret/paths/mapping.cfg
+++ b/.gitsecret/paths/mapping.cfg
@@ -1,5 +1,3 @@
-terraform.tfstate:
-terraform.tfstate.backup:
 terraform.tfvars:
 keys/support.pem:
-tpl/config/rule_config.yml
+tpl/config/rule_config.yml:
